influxdb3-plugin-schemas/tests/snapshots/parse_fixtures__valid_index_minimal_index.json.snap
---
source: influxdb3-plugin-schemas/tests/parse_fixtures.rs
assertion_line: 63
expression: index
---
Index {
    index_schema_version: IndexSchemaVersion {
        major: 2,
        minor: 0,
    },
    artifacts_url: ArtifactsUrl(
        Url {
            scheme: "https",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Domain(
                    "plugins.example.com",
                ),
            ),
            port: None,
            path: "/artifacts",
            query: None,
            fragment: None,
        },
    ),
    plugins: [],
}
